# todoapp-fastapi

./: .gitignore  README.md
app/: IMPROVEMENTS.md  main.py  pyproject.toml
app/api/v1/routers/: tasks.py  users.py
app/core/: __init__.py  user_id_validation.py
app/schemas/: __init__.py  tasks.py  user.py
app/services/: validate_user.py
tests/: test_main.py
tests/api/v1/routers/: test_users.py
