[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "fastapi[standard]>=0.135.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
exclude = [".venv"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true

[tool.taskipy.tasks]
run = "fastapi dev main.py"

pre_test = "task lint"
test = "pytest ../tests --cov=. -vv"

lint = "ruff check . ; ruff check . --diff"
format = "ruff check . --fix ; ruff format ."
format_test = "ruff check ../tests --fix ; ruff format ../tests"